--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_deploy:
   - docker tag "$IMAGE_NAME" "${IMAGE_NAME}:latest"
 deploy:
   provider: script
-  script: docker push "${IMAGE_NAME}:latest" && docker push "${IMAGE_NAME}:${version}"
+  script: docker push "${IMAGE_NAME}:latest"
+  # && docker push "${IMAGE_NAME}:${version}"
   on:
     branch: master
