--- a/.travis.yml
+++ b/.travis.yml
@@ -46,4 +46,5 @@ jobs:
         - gcloud container clusters get-credentials ${CLUSTER_NAME}
         - kubectl rollout restart deployment portfolio-frontend-deployment
         - kubectl get deployments
+        - kubectl get pods
         - kubectl get service
