updated kubectl to use specific image name

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ branches:
     - master
 env:
   global:
+    - APP_NAME="portfolio-frontend"
     - IMAGE_NAME="danielchoi158/portfolio-frontend"
     - SHORT_SHA="$(git log -1 --pretty=%h)"
     - CLUSTER_NAME="tf-webapp-268705-gke"
@@ -44,7 +45,8 @@ jobs:
         - gcloud config set compute/zone ${GCLOUD_ZONE}
         - gcloud config set project ${GCLOUD_PROJECT}
         - gcloud container clusters get-credentials ${CLUSTER_NAME}
-        - kubectl rollout restart deployment portfolio-frontend-deployment
+        - kubectl set image deployment/nginx-deployment ${APP_NAME}=${IMAGE_NAME}:${SHORT_SHA} --record
+        #- kubectl rollout restart deployment portfolio-frontend-deployment
         - kubectl get deployments
         - kubectl get pods
         - kubectl get service
