--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   push_to_registry:
-    name: Push Docker image to Docker Hub
+    name: Build & push to Docker Hub
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
